Column I/O options are now common options
Thanks to the new `table.h' library, many programs will be able to benefit
from the great new features (for example selecting columns by name
match/search). So the three options related to column input/output have
been moved to the common options for all Gnuastro's programs and the book
was also updated to include this update.

But not all three are necessary for all programs, so when they aren't
necessary, Argp's `OPTION_HIDDEN' flag will be used to remove it from the
`--help' output and also to avoid printing it in with the `--printparams'
option.

Various other changes in this commit:

 - Since MakeProfiles can now also accept FITS tables as input, the
   filename alone wasn't sufficient to separate the background image from
   the table. So a new `--background' option has been added to MakeProfiles
   and the only acceptable argument is the table.

 - The `Input', `Output' and `Operating mode' group headers have been moved
   to the common options, so they aren't repeated in each program and
   possibly cause bugs.

 - We are now parsing the `argp_option' arrays in `ui_initialize_options'
   before passing them to `argp_parse', so there was no more need for the
   `NOT_COMMON_HDU_PARSER' (until now, only used in Arithmetic) to define
   an alternative `argp_option'. We now change any values that must be
   changed from the defaults in `ui_initialize_options'.

 - Some further checks were added to MakeProfiles (like the previous
   commits, this commit was also part of the process of porting the new
   option management system in MakeProfiles, but slowly got too large and
   so it deserves its own commit before finishing that process).

 - The old `--tabletype' option is now called `--tableformat' to avoid
   confusion with data type.

 - Until now, only program specific options had linked lists (options that
   can be called multiple times). But with the usage of the `--hdu' option
   multiple times by Arithmetic, the co

--- a/bin/mkprof/astmkprof.conf
+++ b/bin/mkprof/astmkprof.conf
@@ -17,6 +17,11 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
+#input
+ hdu                   0
+ backhdu               0
+ searchin           name
+
 # Output:
  naxis1             1000
  naxis2             1000
@@ -52,5 +57,4 @@
  resolution         0.03
 
 # Common options
- hdu                   0
  minmapsize    100000000
