--- a/bin/table/asttable.conf
+++ b/bin/table/asttable.conf
@@ -23,7 +23,7 @@
  ignorecase       0
 
 # Output:
- tabletype        fits-binary
+ tableformat      fits-binary
 
 # Common options
  minmapsize       1000000000
