Header using new option management system
The new option management system has been implemented for the Header
program. It can still benefit in many aspects from `gal_data_t', but for
the time being they aren't crucial (and I don't have much time!).

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -159,7 +159,7 @@ imgwarp/homographic.sh: convolve/spatial.sh.log
 mknoise/addnoise.sh: imgwarp/imgwarp_scale.sh.log
 mkprof/ellipticalmasks.sh: mknoise/addnoise.sh.log
 mkprof/inputascanvas.sh: mknoise/addnoise.sh.log
-header/write.sh: convolve/spatial.sh.log
+header/write.sh: mkprof/mosaic1.sh.log
 header/print.sh: header/write.sh.log
 header/update.sh: header/write.sh.log
 header/delete.sh: header/write.sh.log
