ImageCrop works with gal_data_t features
ImageCrop now works with all the new features of `gal_data_t', and the
option management system. Some new features were also added. This is a very
large set of changes, so everything will be discussed as the list below:

ImageCrop:

 - ImageCrop doesn't have separate `--imgmode' and `--wcsmode'
   options. There is now one `--mode' option which takes two values: `img'
   and `wcs'. This was both useful from the user's perspective and from the
   developer's prespective.

 - In the output of `--help' the options have become much better organized
   and classified compared to before.

 - ImageCrop can now read the name of the crop based on the value in a
   given column (task #14101).

 - In many cases, the old `naxes[2]' array (which was in log type and FITS
   order) was replaced by the new `dsize[2]' array of `gal_data_t' which is
   in C format and has the `size_t' type. This was done because slowly we
   will be completely removing the use of `naxes[2]' outside of
   `gnuastro/fits.c'. When programming in C, it is much less buggy and more
   clear if things follow the C standard.

 - Like MakeProfiles, the log file is now created by a linked list of
   `gal_data_t' structures and is written by the new library function
   `gal_options_print_log' function.

 - ImageCrop test scripts and test catalog were updated to be usable with
   the new features.

Rest of Gnuastro:

 - The old `cite.h' files have been updated to `authors-cite' in all the
   progams, to facilitate porting them later.

 - Writing a log file has many common issues between the different
   programs, so based on what we had written for MakeProfiles, a new
   `gal_options_print_log' function was created and after filling in the
   log-file information, programs can just define comments, and this
   function will do the job of making a standard log file.

 - The new `gal_options_print_log' is now also used in MakeProfiles.

 - arXiv:1611.06387 was added as a ci

--- a/bin/imgcrop/astimgcrop.conf
+++ b/bin/imgcrop/astimgcrop.conf
@@ -17,21 +17,19 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
-# Operating mode:
- imgmode        0
- wcsmode        1
-
 # Input image and catalog parameters:
  hdu            0
- xcol           1
- ycol           2
+ cathdu         1
  iwidth         201
- racol          3
- deccol         4
  wwidth         3
  hstartwcs      0
  hendwcs        0
 
 # Output parameters:
  checkcenter    0
- suffix        _cropped.fits
+ suffix         _cropped.fits
+
+# Operating mode:
+ mode          wcs
+ searchin      name
+ minmapsize    1000000000
