Convolve works with gal_data_t features
The Convolve program is now also using the new features of `gal_data_t'
which greatly helped in simplifying `ui.c'. A summary of the changes are:

 - The old `--frequency' and `--spatial' options were removed to have just
   one: `--domain'. It can get values of `frequency' and `spatial' (as a
   string).

 - The old `--viewfreqsteps' was changed to `--checkfreqsteps' to fit with
   the general style of such check images.

 - In ImageCrop (from the previous commit), the description of the column
   options was not updated, so they were updated.

 - `gal_fits_write_img_fitsptr' deletes the two comment lines that CFITSIO
   puts in the header for clarity and a clean header. The version of
   CFITSIO is included in the header, clearly showing which version of
   CFITSIO was used to make the file. This more directly relevant to how
   the file was written (and should be read) than the raw standard (after
   all, CFITSIO complies with the standard, but also has additional
   features, like file types). So having a citation to the paper was
   irrelevant in Gnuastro (which writes the version of CFITSIO).

 - `gal_fits_write_keys_version' now also writes the version of GSL used.

--- a/bin/convolve/astconvolve.conf
+++ b/bin/convolve/astconvolve.conf
@@ -18,8 +18,7 @@
 # without any warranty.
 
 # Operating mode:
- spatial            0
- frequency          1
+ domain             frequency
  makekernel         0
  minsharpspec       0.005
 
@@ -31,8 +30,9 @@
 # Output:
 
 # Mesh grid:
- meshsize          32
+ meshsize           32
  nch1               1
  nch2               1
- lastmeshfrac     0.6
+ lastmeshfrac       0.6
  fullconvolution    0
+ minmapsize         500000000
