--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -160,6 +160,17 @@ bootstrap_post_import_hook()
              print "     IMPORTANT: A Gnuastro addition. */";               \
              print "  unsigned char set;";                                  \
                                                                             \
+             printf "\n";                                                   \
+             print "  /* Function to process the given value.";             \
+             print "     Arguments to the function:";                       \
+             print "       struct argp_option *option: This structure.";    \
+             print "       char      *arg: String given by the user.";      \
+             print "       void *filename: Filename option was read from."; \
+             print "       size_t  lineno: Line number of option in file."; \
+             print "";                                                      \
+             print "     IMPORTANT: A Gnuastro addition. */";               \
+             print "  void (*func)(struct argp_option *, char *, char *, size_t);";  \
+                                                                            \
              print;                                                         \
              inargp=0;                                                      \
           }                                                                 \
