--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -37,17 +37,16 @@ along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 #define GAL_CONFIG_HAVE_PTHREAD_BARRIER @HAVE_PTHREAD_BARRIER@
 
-#define GAL_CONFIG_BIN_OP_UCHAR         @HAVE_BIN_OP_UCHAR@
-#define GAL_CONFIG_BIN_OP_CHAR          @HAVE_BIN_OP_CHAR@
-#define GAL_CONFIG_BIN_OP_USHORT        @HAVE_BIN_OP_USHORT@
-#define GAL_CONFIG_BIN_OP_SHORT         @HAVE_BIN_OP_SHORT@
-#define GAL_CONFIG_BIN_OP_UINT          @HAVE_BIN_OP_UINT@
-#define GAL_CONFIG_BIN_OP_INT           @HAVE_BIN_OP_INT@
-#define GAL_CONFIG_BIN_OP_ULONG         @HAVE_BIN_OP_ULONG@
-#define GAL_CONFIG_BIN_OP_LONG          @HAVE_BIN_OP_LONG@
-#define GAL_CONFIG_BIN_OP_LONGLONG      @HAVE_BIN_OP_LONGLONG@
-#define GAL_CONFIG_BIN_OP_FLOAT         @HAVE_BIN_OP_FLOAT@
-#define GAL_CONFIG_BIN_OP_DOUBLE        @HAVE_BIN_OP_DOUBLE@
+#define GAL_CONFIG_BIN_OP_UINT8         @HAVE_BIN_OP_UINT8@
+#define GAL_CONFIG_BIN_OP_INT8          @HAVE_BIN_OP_INT8@
+#define GAL_CONFIG_BIN_OP_UINT16        @HAVE_BIN_OP_UINT16@
+#define GAL_CONFIG_BIN_OP_INT16         @HAVE_BIN_OP_INT16@
+#define GAL_CONFIG_BIN_OP_UINT32        @HAVE_BIN_OP_UINT32@
+#define GAL_CONFIG_BIN_OP_INT32         @HAVE_BIN_OP_INT32@
+#define GAL_CONFIG_BIN_OP_UINT64        @HAVE_BIN_OP_UINT64@
+#define GAL_CONFIG_BIN_OP_INT64         @HAVE_BIN_OP_INT64@
+#define GAL_CONFIG_BIN_OP_FLOAT32       @HAVE_BIN_OP_FLOAT32@
+#define GAL_CONFIG_BIN_OP_FLOAT64       @HAVE_BIN_OP_FLOAT64@
 
 #define GAL_CONFIG_SIZEOF_SIZE_T        @SIZEOF_SIZE_T@
 
