Warp now uses gal_data_t and all its fruits
The Warp program now uses all the new features offered by `gal_data_t' in
this branch. Several major changes were made to make it more user friendly
as described below:

 - The old `--nowcscorrection' option has been given a more clear name of
   `--keepwcs'. With this option, Warp will not apply the warp the input's
   WCS structure.

 - The old `--maxblankfrac' option has been changed to
   `--coveredfrac'. Until now, Warp would only look for the fraction of
   input blank/NaN pixel area over the output pixel. But this would be
   useless on the edges of the image. So the new `--coveredfrac' option
   takes the acceptable fraction of output pixel area that must be covered
   by input pixels in order to give that output pixel a value. When given a
   sufficiently high value (1.0 is the largest possible), it will allow the
   user to not be bothered by bad edge values which are caused because of
   not having any data outside the image.

 - The old `--nofitscorrect' option has been changed to `--centeroncorner'
   to be more clear. The new option is now more general than
   before. Before, it would only work on 2D matrixes and modular warpings,
   but now, it is general and happens after the final input Matrix is
   ready, so it even applies to 3D raw input matrix. The previous case was
   confusing both for the users and developers.

 - The old `--zerofornoinput' option has been removed. If the user doesn't
   want blank pixels for regions were there was no data, they can use
   Arithmetic.

 - The old `--doubletype' option has been removed, since the common option
   `--type' now comes in from the infra-structure which is much more
   flexible and allows the user to set any type, not just double.

 - A new `func' element was added to `argp_option' that will be used by the
   option parsers to immediately parse the value and store the value in a
   lower-level way that can be used by the programs more efficiently. This
  

--- a/bin/warp/Makefile.am
+++ b/bin/warp/Makefile.am
@@ -30,7 +30,7 @@ bin_PROGRAMS = astwarp
 
 astwarp_LDADD = -lgnuastro
 
-astwarp_SOURCES = main.c ui.c imgwarp.c
+astwarp_SOURCES = main.c ui.c warp.c
 
 EXTRA_DIST = main.h authors-cite.h args.h ui.h warp.h
 
