--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -163,13 +163,14 @@ bootstrap_post_import_hook()
              printf "\n";                                                   \
              print "  /* Function to process the given value.";             \
              print "     Arguments to the function:";                       \
-             print "       struct argp_option *option: This structure.";    \
+             print "       struct argp_option *option: This argp_option.";  \
              print "       char      *arg: String given by the user.";      \
-             print "       void *filename: Filename option was read from."; \
+             print "       char *filename: Filename option was read from."; \
              print "       size_t  lineno: Line number of option in file."; \
+             print "       void   *struct: Pointer to main program struct.";\
              print "";                                                      \
              print "     IMPORTANT: A Gnuastro addition. */";               \
-             print "  void (*func)(struct argp_option *, char *, char *, size_t);";  \
+             print "  void *(*func)(struct argp_option *, char *, char *, size_t, void *);";  \
                                                                             \
              print;                                                         \
              inargp=0;                                                      \
