--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,6 @@ astmkprof
 astheader
 runtest.sh
 astmknoise
-astimgstat
 config.sub
 install-sh
 aclocal.m4
@@ -103,6 +102,7 @@ doc/fdl.texi
 config.status
 doc/stamp-vti
 astarithmetic
+aststatistics
 astnoisechisel
 astsubtractsky
 autom4te.cache
