--- a/bin/warp/astwarp.conf
+++ b/bin/warp/astwarp.conf
@@ -21,4 +21,8 @@
  hdu           0
 
 # Output:
- maxblankfrac  0.8
+ coveredfrac   1.0
+
+# Common parameters
+ type          float32
+ minmapsize    1000000000
