MakeNoise now uses the new gal_data_t infrastructure
The fruits of the new data structure are now implemented in MakeNoise. In
the process it was found that MakeNoise isn't reporting the correct seed
value to the random number generator, this problem has been fixed. It also
now reports the seed in verbose mode in any case (previously it would only
report the seed when an environment seed was to be used).

After finishing MakeNoise and running `make check' several of MakeProfiles
tests (that depended on MakeNoise outputs) were also tested and the
respective modifications were made in them to run successfully. In the
process, two corrections were made in MakeProfiles:

  - The old `--inputascanvas' is now was re-instated but with a new name:
    `--clearcanvas'. It was mainly removed because of its non-clean
    implementation before. But sice MakeProfiles' `ui.c' is now clean,
    re-implementing this feature was very easy. It can be very useful for
    practical purposes, when making labeled image for example.

  - Until now, MakeProfiles would abort with an error when the input
    columns had blank values. But for masking it might happen that you set
    a blank magnitude. So this check has now been removed when reading the
    magnitude column.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -73,7 +73,7 @@ TESTS = $(check_PROGRAMS) prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh  \
   convertt/blankch.sh convertt/jpegtotxt.sh convertt/fitstojpegcmyk.sh     \
   convertt/jpegtofits.sh convertt/fitstopdf.sh convolve/spatial.sh         \
   convolve/frequency.sh warp/warp_scale.sh warp/homographic.sh             \
-  mknoise/addnoise.sh mkprof/ellipticalmasks.sh mkprof/inputascanvas.sh    \
+  mknoise/addnoise.sh mkprof/ellipticalmasks.sh mkprof/clearcanvas.sh      \
   header/write.sh header/print.sh header/update.sh header/delete.sh        \
   statistics/basicstats.sh subtractsky/subtractsky.sh                      \
   noisechisel/noisechisel.sh mkcatalog/simple.sh mkcatalog/aperturephot.sh \
@@ -87,10 +87,10 @@ TESTS = $(check_PROGRAMS) prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh  \
 
 
 # Files to distribute along with the tests.
-EXTRA_DIST = $(TESTS) during-dev.sh mkprof/mkprofcat1.txt                   \
-  mkprof/ellipticalmasks.txt mkprof/inputascanvas.txt                       \
-  mkprof/mkprofcat2.txt mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt         \
-  mkprof/radeccat.txt crop/cat.txt table/table.txt
+EXTRA_DIST = $(TESTS) during-dev.sh mkprof/mkprofcat1.txt                 \
+  mkprof/ellipticalmasks.txt mkprof/clearcanvas.txt mkprof/mkprofcat2.txt \
+  mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt mkprof/radeccat.txt         \
+  crop/cat.txt table/table.txt
 
 
 
@@ -154,11 +154,11 @@ convertt/jpegtofits.sh: convertt/blankch.sh.log
 convertt/fitstopdf.sh: crop/section.sh.log
 convolve/spatial.sh: mkprof/mosaic1.sh.log
 convolve/frequency.sh: mkprof/mosaic1.sh.log
-warp/imgwarp_scale.sh: convolve/spatial.sh.log
+warp/warp_scale.sh: convolve/spatial.sh.log
 warp/homographic.sh: convolve/spatial.sh.log
 mknoise/addnoise.sh: warp/warp_scale.sh.log
 mkprof/ellipticalmasks.sh: mknoise/addnoise.sh.log
-mkprof/inputascanvas.sh: mknoise/addnoise.sh.log
+mkprof/clearcanvas.sh: mknoise/addnoise.sh.log
 header/write.sh: mkprof/mosaic1.sh.log
 header/print.sh: header/write.sh.log
 header/update.sh: header/write.sh.log
@@ -168,7 +168,7 @@ subtractsky/subtractsky.sh: mknoise/addnoise.sh.log
 noisechisel/noisechisel.sh: mknoise/addnoise.sh.log
 mkcatalog/simple.sh: noisechisel/noisechisel.sh.log
 mkcatalog/aperturephot.sh: noisechisel/noisechisel.sh.log          \
-                           mkprof/inputascanvas.sh
+                           mkprof/clearcanvas.sh
 arithmetic/snimage.sh: noisechisel/noisechisel.sh.log
 arithmetic/where.sh: noisechisel/noisechisel.sh.log
 arithmetic/or.sh: noisechisel/noisechisel.sh.log
