Statistics mostly complete
The statistics program has been mostly complete, the mode finding algorithm
hasn't been applied yet though. Generally, Statistics has been mostly
re-written with mainly new options. The manual has also been updated to
fully describe the new added features.

General to all the programs:

 - The `option_keys_enum' has been moved to the `ui.h' file instead of
   `ui.c'. This was done because in some cases (like in Statistics), the
   keys might be useful for other source files in the program too.

 - A new function in `table.h' has been written to directly write the data
   into a log file without the program having to worry about some details.

 - The `Image manipulation' and `Image analysis' chapter titles of the book
   have been changed to `Data manipulation' and `Data analysis'.

 - The statistical operations returning one value have been moved from
   `lib/arithmetic.c' to `lib/statistics.c' as separate functions. They are
   still callable within the Arithmetic library and program, but the main
   functions are now defined in `lib/statistics.c'.

 - The blank functions were also cleaned up with better use of macros so
   the `case' of each type now fully fits in one line, making them easier
   to inspect/debug/improve.

--- a/bin/statistics/aststatistics.conf
+++ b/bin/statistics/aststatistics.conf
@@ -20,6 +20,12 @@
 # Input image:
  hdu                 0
 
+# Histogram and CFP settings
+ numasciibins        70
+ asciiheight         10
+ numbins            100
+
+
 # Common options
  minmapsize          1000000000
  tableformat         fits-binary
