Statistics now successfully uses gal_data_t
The Statistics program now fully implements the previous calculations in a
much more robust and user friendly manner along with many new features. The
main features added with this commit are:

 - Using a reference column with the `--refcol' option to select the
   elements from the input dataset.

 - The `--quantile' option which will print the values at the given
   quantiles.

 - The `--quantfunc' option which will print the quantile function, or
   inverse of the `--quantile'. So you give it a value and it will say what
   quantile that value has in the input distribution.

 - The `--mode', `--modequant', `--modesym', and `--modesymvalue' options
   as described in Appendix C of Akhlaghi and Ichikawa (2015, ApJS 220,
   1). The new `--mirror' option is also now available to make the
   histogram and cumulative frequency plot of the mirror distribution.

Many functions were also added to the statistics library and also the
Statistics program to make all of these possible.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -47,9 +47,9 @@ libgnuastro_la_LIBADD = $(top_builddir)/bootstrapped/lib/libgnu.la
 
 
 # Specify the library .c files
-libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c                  \
-  arithmetic-onlyint.c blank.c box.c checkset.c data.c fits.c git.c        \
-  linkedlist.c mesh.c mode.c options.c polygon.c qsort.c spatialconvolve.c \
+libgnuastro_la_SOURCES = arithmetic.c arithmetic-binary.c               \
+  arithmetic-onlyint.c blank.c box.c checkset.c data.c fits.c git.c     \
+  linkedlist.c mesh.c options.c polygon.c qsort.c spatialconvolve.c     \
   statistics.c table.c threads.c timing.c txt.c wcs.c
 
 
@@ -81,7 +81,7 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h       \
 # distribute them here.
 EXTRA_DIST = $(headersdir)/README gnuastro.pc.in arithmetic-binary.h    \
   arithmetic-onlyint.h arithmetic-other.h config.h.in checkset.h        \
-  fixedstringmacros.h mode.h neighbors.h options.h timing.h
+  fixedstringmacros.h neighbors.h options.h timing.h
 
 
 
